--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </form>
-                <p class="message-error">Veuillez remplir tous les champs pour ajouter un projet</p>
+                <p class="message-error">Veuillez remplir tous les champs</p>
                 <span class="modal-line"></span>
                 <button class="modal-add-work-button">Valider</button>
             </div>
