--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -33,7 +33,7 @@
             <label for="password">Mot de passe</label>
 			<input class="login-password" type="password" value="S0phie">
         </form>
-		<p class="error">L'e-mail ou le mot de passe est incorrecte</p>
+		<p class="login-error">L'e-mail ou le mot de passe est incorrecte</p>
         <button class="login-button">Se connecter</button>
         <a href="">Mot de passe oublié</a>
     </div>
